Fix text-align in main-looking

--- a/src/scss/layout/_main-looking.scss
+++ b/src/scss/layout/_main-looking.scss
@@ -43,6 +43,7 @@
       line-height: 30px;
       color: $color-text02;
       padding-bottom: 30px;
+      text-align: justify;
       @media all and (min-width: 768px) {
         font-size: 20px;
       }
